# deepface-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  SECURITY.md  api.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  VERSIONING.md
src/deepface_api/: __init__.py  __main__.py  config.py  exceptions.py  logging.py  main.py  middleware.py
src/deepface_api/api/: meta.py
src/deepface_api/api/v1/: __init__.py  analyze.py  health.py  router.py
src/deepface_api/schemas/: __init__.py  analysis.py  errors.py
src/deepface_api/services/: __init__.py  uploads.py  vision.py
tests/: conftest.py  test_analyze_routes.py  test_health.py  test_schemas.py  test_uploads.py  test_version.py  test_vision_helpers.py
