[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "deepface-api"
description = "Face detection and facial attribute analysis HTTP API powered by RetinaFace + DeepFace."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
keywords = [
    "face-detection",
    "face-recognition",
    "deepface",
    "retinaface",
    "fastapi",
    "computer-vision",
]
authors = [{ name = "deepface-api contributors" }]
maintainers = [{ name = "deepface-api contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = ["version"]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "numpy>=1.24,<3",
    "opencv-python-headless>=4.8,<5",
    "deepface>=0.0.93,<0.1",
    "retina-face>=0.0.14,<0.1",
    "tensorflow>=2.13,<3; platform_machine != 'arm64' or sys_platform != 'darwin'",
    "tensorflow-macos>=2.13,<2.17; platform_machine == 'arm64' and sys_platform == 'darwin'",
    # RetinaFace + DeepFace still use the Keras 2 API surface. TensorFlow
    # 2.16+ ships Keras 3 as the default, so we install tf-keras as the
    # Keras 2 compatibility layer alongside it.
    "tf-keras>=2.16; platform_machine != 'arm64' or sys_platform != 'darwin'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]
docs = ["mkdocs-material>=9.5"]
gpu = ["tensorflow[and-cuda]>=2.13,<2.22"]

[project.scripts]
deepface-api = "deepface_api.__main__:main"

[project.urls]
Homepage = "https://github.com/foru17/deepface-api"
Documentation = "https://github.com/foru17/deepface-api#readme"
Issues = "https://github.com/foru17/deepface-api/issues"
Source = "https://github.com/foru17/deepface-api"
Changelog = "https://github.com/foru17/deepface-api/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/deepface_api/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/deepface_api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/deepface_api",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplify
    "PT",  # pytest style
    "RUF",
]
ignore = [
    "E501", # line length handled by formatter
    "B008", # FastAPI uses Depends() / Query() default values
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["deepface_api"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
files = ["src/deepface_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests that load heavy ML dependencies (deselect with -m 'not integration')",
    "slow: tests that take a long time",
]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["deepface_api"]
omit = ["src/deepface_api/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
